@@ -22,7 +22,7 @@
         <dm enable="true" path="/srv/vscp/dm.xml"/>
 
         <!-- Path to variables storage. -->
-        <variables enable="true" path="/srv/vscp/variables.xml"/>
+        <variables enable="true" path="/etc/vscp/variables.xml"/>
 
         <!-- Set to true to disable VSCP high end services -->
         <vscp enable="true"/>
@@ -32,7 +32,7 @@
         <webrootpath>/home/akhe/vscp_merlin</webrootpath>
 
 	<!-- Path to file holding mime types -->
-	<pathtomimetypes>/etc/vscpd/mimetypes.xml</pathtomimetypes>
+	<pathtomimetypes>/etc/vscp/mimetypes.xml</pathtomimetypes>
 
         <websockets enable="true" port="7681" />
 
